fix horizontal scrollbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -76,6 +76,7 @@ section#about-mahjong div.ornament img { margin-left: -382px; }
 }
 
 #contacts div.row { margin-top: 2em; margin-bottom: 10em; }
+#contacts div.row .container { width: 100%; }
 
 h1 { font-family: "Han Zi Regular"; }
 
